[package]
name = "gpio2mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.5.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
serde_yaml = "0.8.23"
tokio = { version = "1.15.0", features = ["macros", "time", "rt", "signal"] }
rumqttc = "0.10.0"
regex = "1.5.4"
lazy_static = "1.4.0"