[package]
name = "gpio2mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
gpio-cdev = "^0.6"
modbus = { git = "https://github.com/Clueliss/modbus", rev = "b99b4c1" }
paho-mqtt = { version = "^0.12", default-features = false, features = ["bundled"] }
regex = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_yaml = "^0.9"
thiserror = "^1"
tokio = { version = "^1", features = ["macros", "time", "rt", "signal", "sync"] }
